plugins {
    id 'java'
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '6.0.24'  // ★ M4-fix: 鎖定具體版本，避免構建不確定性
}

group   = 'com.blockreality'
version = '1.0.0'
archivesBaseName = 'block-reality-api'

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

minecraft {
    mappings channel: 'official', version: '1.20.1'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'debug'
            mods { blockreality { source sourceSets.main } }

            // ★ FIX: 強制將 LWJGL 3.3.5 Vulkan / VMA / shaderc 模組加入
            //   runClient task 的 classpath，覆蓋 Minecraft 自帶的 3.3.1。
            //   ForgeGradle 6 在解析 gameLayerLibraries 時以版本號較高者優先，
            //   但若 3.3.1 已被解壓到 bundled 目錄則仍可能優先載入。
            //   jvmArgs -Djava.class.path 不可靠，改用 lazyToken 加入 classpath。
            lazyToken('minecraft_classpath') {
                configurations.runtimeClasspath
                    .filter { it.name.contains('lwjgl-vulkan')
                           || it.name.contains('lwjgl-vma')
                           || it.name.contains('lwjgl-shaderc') }
                    .collect { it.absolutePath }
                    .join(File.pathSeparator)
            }
        }
        server {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'debug'
            mods { blockreality { source sourceSets.main } }
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.20.1-47.4.13"

    // ★ RT-0-4: LWJGL 版本從 3.3.1 升級至 3.3.5
    //   原因：3.3.1 缺少 Ada/Blackwell 新擴展的 Java 綁定：
    //     - VK_NV_ray_tracing_invocation_reorder (SER) — Ada SM8.9
    //     - VK_EXT_opacity_micromap (OMM)              — Ada SM8.9
    //     - VK_NV_displacement_micromap               — Ada SM8.9
    //   注意：VK_NV_cluster_acceleration_structure (Blackwell) 的 LWJGL
    //   Java 綁定尚未穩定（風險表：RT-0-4 ⏳ 待確認），若需使用需手動 JNI。
    //   升級至 3.3.5 確保 Ada 擴展已有完整 LWJGL 支援。
    //
    // ★ FIX: lwjgl-vulkan 是純 Java 綁定（不需 natives），用 implementation 涵蓋
    // compile + runtime classpath；額外宣告 runtimeOnly 確保 ForgeGradle 的
    // lazyToken / gameLayerLibraries 解析時也能獨立找到這個 JAR。
    implementation "org.lwjgl:lwjgl-vulkan:3.3.5"
    runtimeOnly    "org.lwjgl:lwjgl-vulkan:3.3.5"

    implementation "org.lwjgl:lwjgl-vma:3.3.5"
    runtimeOnly    "org.lwjgl:lwjgl-vma:3.3.5"
    runtimeOnly    "org.lwjgl:lwjgl-vma:3.3.5:natives-windows"
    runtimeOnly    "org.lwjgl:lwjgl-vma:3.3.5:natives-linux"
    runtimeOnly    "org.lwjgl:lwjgl-vma:3.3.5:natives-macos"
    runtimeOnly    "org.lwjgl:lwjgl-vma:3.3.5:natives-macos-arm64"

    // P7-A: GLSL → SPIR-V 執行期編譯（RT pipeline shader 建立所需）
    implementation "org.lwjgl:lwjgl-shaderc:3.3.5"
    runtimeOnly    "org.lwjgl:lwjgl-shaderc:3.3.5"
    runtimeOnly    "org.lwjgl:lwjgl-shaderc:3.3.5:natives-windows"
    runtimeOnly    "org.lwjgl:lwjgl-shaderc:3.3.5:natives-linux"
    runtimeOnly    "org.lwjgl:lwjgl-shaderc:3.3.5:natives-macos"
    runtimeOnly    "org.lwjgl:lwjgl-shaderc:3.3.5:natives-macos-arm64"

    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
    // M6/M9: 參數化測試支援
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.9.3'  // ★ M4-fix: 鎖定版本
    // ★ Issue#9: Mockito 單元測試框架（mock ServerLevel / BlockEntity 等 Minecraft 依賴）
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes([
            'Specification-Title'     : 'block-reality-api',
            'Specification-Vendor'    : 'BlockReality',
            'Implementation-Title'    : project.name,
            'Implementation-Version'  : project.jar.archiveVersion,
            'Implementation-Vendor'   : 'BlockReality'
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

task copyToDevInstance(type: Copy, dependsOn: jar) {
    def prismBase = System.getProperty('os.name').contains('Windows')
        ? "${System.env.APPDATA}/PrismLauncher"
        : "${System.getProperty('user.home')}/.local/share/PrismLauncher"
    from jar.archiveFile
    into "$prismBase/instances/BR-Dev/.minecraft/mods/"
    rename { 'block-reality-api.jar' }
}
